@@ -1,3 +1,8 @@
+2006-01-24    <tino@firebird.03.softkill.net>
+
+	* misc_selectcopyloop.h (selectcopyloop): total number of bytes
+	read (bi-directional) added as output parameter.
+
 2006-01-21    <tino@firebird.03.softkill.net>
 
 	* misc_selectcopyloop.h: added into CVS
